--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,9 @@
+= ARCHIVED
+
+This project is no longer maintained and needs a bunch of rails upgrades to be secure.
+
+---
+
 = CMS/Wiki/Forum
 
 This is a pretty standard Rails app that you might use as a starting point for a custom CMS.
